kalabox/kalabox#1202: Fix z-index issue with site loading progress.

--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -17,7 +17,7 @@
   color: $gray-lightest;
   width: 280px;
   text-align: right;
-  z-index: 10;
+  z-index: 20;
   .close {
     color: $gray-lightest;
     opacity: .7;
