--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -53,14 +53,6 @@
 }
 
 // Site styling.
-#overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: #ddd;
-  z-index: 1000;
-  opacity: .4;
-}
 
 .site-wrapper {
   margin: 10px 0px;
@@ -203,9 +195,18 @@
       }
     }
   }
+
+  #overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #ddd;
+    z-index: 10;
+    opacity: .4;
+  }
   .loader {
     position: absolute;
-    z-index: 1000;
+    z-index: 10;
     left: 56px;
     .ball-clip-rotate>div {
       border: 3px solid $gray-darker;
